# pabloalcain.github.io

./: .gitignore  CNAME  _config.yml  index.html
_data/: navigation.yml
_includes/: archive-single.html  scripts.html
_includes/head/: custom.html
_layouts/: default.html
_pages/: about.md  ds-archive.md  hpc_archive.md  physics_archive.md  publications.md  varios-archive.md
assets/css/: main.css
assets/posts/central-limit-theorem/: central-limit-theorem.ipynb  pyproject.toml
assets/posts/structure-factor/: ssf.py
assets/posts/t-distribution/: t-distribution.ipynb
ds/_posts/: 2022-11-22-t-distribution.md  2023-03-04-every-abtest-is-wrong.md  2025-08-11-central-limit-theorem.md
eng/_posts/: 2016-04-28-software-carpentry.md  2016-07-11-python-ctypes-introduction.md  2017-05-26-ctypes.md  2017-10-17-ctypes-struct.md  2022-09-24-software-design-for-ml-motivation.md  2022-10-03-software-design-for-ml-motivation.md  2022-10-17-software-design-for-ml-overeager.md  2022-10-31-software-design-for-ml-pie.md
eng/_posts/ctypes-basic/: arrays.c
eng/_posts/ctypes-struct/: rectangle.c
hpc/_posts/: 2016-04-28-software-carpentry.md  2016-07-11-python-ctypes-introduction.md  2017-05-26-ctypes.md  2017-10-17-ctypes-struct.md
hpc/_posts/ctypes/: add_numbers.py  add_numbers_fast.py
hpc/_posts/ctypes-basic/: add_two.c
hpc/_posts/ctypes-struct/: geometry.py  geometry_minimal.py  rectangle.c
hpc/_posts/python-c/: add_numbers.c
physics/_posts/: 2016-04-22-structure-factor.md  2016-05-30-molecular-physics.md
varios/_posts/: 2023-01-21-no-al-clickbait.md
