[tool.poetry]
name = "cental-limit-theorem"
version = "0.1.0"
description = ""
authors = ["Pablo Alcain <pabloalcain@gmail.com>"]
readme = "README.md"
packages = [{include = "cental_limit_theorem"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
jupyter = "^1.1.1"
scipy = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
